fixed: most of responsiveness, button interaction to the point that it works, but is basic need to fix: responsive at 1440 animations on clicks minor spacing and layout refactor

--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,9 @@
 }
 
 h1 {
-    font-size: 1.75rem;
+    font-size: 2rem;
     font-weight: 700;
     color: var(--Almost-Black);
-    margin: .5em 0;
 }
 
 p {
@@ -32,8 +31,21 @@ p {
     margin: 1em 0;
 }
 
-.clickable {
+.clickable,
+.btn, 
+li
+{
+    color: var(--Medium-Grey);
     cursor: pointer;
+}
+.clickable:hover,
+.clickable:focus,
+.btn:hover,
+.btn:focus,
+li:hover, 
+li:focus
+{
+    color: var(--Almost-Black);
 }
 
 
@@ -41,7 +53,6 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    
 }
 
 .hide{
@@ -53,7 +64,6 @@ body {
     align-items: center;
     background-color: var(--White);
     border: none;
-    cursor: pointer;
 }
 
 li {
@@ -75,31 +85,42 @@ li {
 header {
     display: flex;
     justify-content: space-between;
+}
+
+.snap-logo {
     padding: 1em;
 }
 
 .menu {
-    position:absolute;
+    position: absolute;
     background-color: var(--White);
     right: 0px;
     height: 100vh;
     width: 65%;
     z-index: 2;
-    padding: 4em 2em;
+    padding: 0 2em;
+}
+
+.main-menu-list{
+    margin-top: 4em;
+}
+
+.desktop-menu-list {
+    display: none;
 }
 
 .menu-close {
     position:relative;
     z-index: 3;
 }
+.menu-btn {
+    margin: 1em;
+}
 
 .list-child{
     text-indent: 20px;
 }
 
-.btn-parent {
-    color: var(--Medium-Grey);
-}
 
 .arrow {
     margin-left: .75em;
@@ -122,12 +143,15 @@ header {
 /* main */
 
 main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     text-align: center;
+    height: 100%;
 }
 
 .hero-mobile {
     max-width: 100%;
-    margin-bottom: 2em;
 }
 
 .hero-desktop {
@@ -145,15 +169,16 @@ main {
 
 /* footer */
 
-footer {
+.footer-logo {
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
 }
+
 
 .client {
     max-width: 75px;
     max-height: 26px;
-    margin-right: 1.8em;
 }
 
 
@@ -217,28 +242,37 @@ footer {
     }
 }
 
+/* media */
+
 
 @media only screen and (min-width: 1024px){
-    /* body{
-        flex-direction: row-reverse;
-    } */
+    body{
+        padding: 2em;
+        max-height: 100vh;
+        justify-content: center;
+    }
 
     main{
         display: flex;
         flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items:center;
+        padding: 2em;
+        max-height: 90%;
     }
     .content {
         text-align: left;
         display: flex;
         flex-direction: column;
         align-items:flex-start;
-        justify-content: center;
-        margin: 0 3em;
+        justify-content: space-between;
+        margin: 1em;
+
     }
     
     h1 {
-        font-size: 4.2rem;
-        margin: 1em 0 0 0;
+        font-size: 3.9rem;
+        margin: 0;
         line-height: 3.6rem;
     }
     
@@ -246,21 +280,112 @@ footer {
         font-weight: 500;
         color: var(--Medium-Grey);
         line-height: 1.5rem;
-        margin: 3em 4em 2em 0;
+        margin: 3em 4em 0 0;
     }
 
-
-    /* .logo{
-        width: 4em;
-        height: 2em;
-    } */
     .hero-mobile {
         display: none;
     }
     
     .hero-desktop {
         display: block;
-        max-width: 40%;
-        margin-top: 2em;
+        max-height: 90%;
     }
+
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1em;
+        max-width: 100%;
+    }
+    
+    .menu {
+        position: relative;
+        background-color: var(--White);
+        right: 0px;
+        height: auto;
+        min-width:fit-content;
+        display: flex;
+        justify-content: space-between;
+        z-index: 1;
+        padding: 0em;
+    }
+
+    .menu-open {
+        display: none;
+    }
+    
+    .menu-close {
+        display: none;
+    }
+
+    .main-menu-list {
+        display: none;
+        margin-top: 0;
+    }
+
+    .desktop-menu-list {
+        display: flex;
+        position: absolute;
+        top: -30px;
+        z-index: 2;
+    }
+
+    .btn-parent {
+        color: var(--Medium-Grey);
+    }
+
+    li {
+        margin-right: 1em;
+        margin-top: 1em;
+    }
+
+    .menu-list-features,
+    .menu-list-company{
+        box-shadow: 5px 10px 18px hsla(0, 0%, 0%, .05);
+        position: absolute;
+        z-index: 99;
+        background-color: var(--White);
+        top: 50px;
+        padding: 0 .25em 1em .25em;
+    }
+
+    .menu-list-features {
+        left: -55px;
+    }
+    .menu-list-company {
+        left: 125px;
+    }
+
+
+    .button-container {
+        flex-direction: row;
+        margin-top: 0;
+    }
+
+    .register {
+        margin: 0 2em;
+    }
+
+    .learn-more {
+        margin-bottom: 0;
+        margin-top: 2em;
+        background-color: var(--White);
+        color: var(--Almost-Black);
+        font-size: 1.2rem;
+    }
+
+    .learn-more:hover,
+    .learn-more:focus{
+        background-color: var(--Almost-Black);
+        color: var(--White);
+    }
+
+    .footer-logo {
+        margin-top: 4em;
+        min-width: 85%;
+        justify-content: space-between;
+    }
+
 }
